fixed alignment issues in body, added box shadow for card

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     justify-content: center;
     align-items: center;
     font-family: 'roboto', sans-serif;
-    background: rgb(247, 218, 55);
+    background: rgb(233, 232, 230);
     perspective: 1000px;
 }
 
@@ -51,7 +51,8 @@ body{
     height: 87%;
     border-radius: 20px;
     overflow: hidden;
-    border: 5px solid rgb(116, 243, 78);
+    border: 5px solid rgb(252, 43, 206);
+    opacity: 2;
 }
 
 .cd-body .grid {
@@ -65,13 +66,14 @@ body{
 
 
 .cd-image {
-    background: url(https://images.pexels.com/photos/4571251/pexels-photo-4571251.jpeg);
+    background: url(https://images.pexels.com/photos/2923591/pexels-photo-2923591.jpeg);
     position: relative;
     width: 100%;
     height: 100%;
     background-size: cover;
     border-radius: 20px;
     transform: translateZ(40px);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 
@@ -109,15 +111,22 @@ body{
 }
 
 .title {
-    font-size: 60px;
+    font-size: 50px;
     margin-bottom: 20px;
-    color: #fff;
+    color: rgb(255, 255, 255);
     text-transform: uppercase;
 }
 
 p.info {
     text-transform: capitalize;
     font-size: 15px;
+    color: rgb(255, 255, 255);
+}
+
+img {
+    width: 100px;
+	height: 100px;
+	border-radius: 50%;
 }
 
 .card:hover .inside-content {
